# cpp-utils

./: CMakeLists.txt  README.md  format.sh
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: Main.cpp
cmake/: flags.cmake  options.cmake  warnings.cmake
tests/: CMakeLists.txt
tests/src/: TestsMath.cpp  tests.cpp
utils/: CMakeLists.txt
utils/include/utils/: ClassUtils.hpp  FrameManager.hpp  Macros.hpp  Math.hpp  ScopeExit.hpp  ScopeProfiler.hpp  ScopedProfiler.hpp  Time.hpp
utils/src/: FrameManager.cpp  ScopeProfiler.cpp  ScopedProfiler.cpp
